fixed slideshow alignments and size

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -229,27 +229,26 @@ a:link, a:visited, a:hover, a:active {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: calc(100% - 85px); /* Adjust to ensure it doesn't extend into the header */
+    height: 100%; /* Ensure it fills the entire container */
     position: relative; /* Ensure absolute positioned elements are relative to this container */
     overflow: hidden; /* Prevent overflow */
     margin: 0;
     padding: 0;
 }
 
-.slideshow #slideshowImageContainer img {
-    display: block;
+.slideshow #slideshowImageContainer img,
+.slideshow #slideshowImageContainer video {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-    object-position: center;
+    margin: auto;
 }
 
 .slideshow #slideshowDisplayedImage,
 .slideshow #slideshowDisplayedVideo {
     width: 100%;
-    height: 100%; /* Adjust height to be 85px smaller */
+    height: 100%;
     object-fit: contain; /* Ensure the image/video fits within the container */
-    object-position: center;
 }
 
 .slideshow #controlsContainer {
@@ -309,6 +308,7 @@ a:link, a:visited, a:hover, a:active {
 #playPauseButton .fa-pause {
     display: none;
 }
+
 
 /* Drawer styles */
 #drawer { 
